# conditioned-kernel

./: .gitignore  AGENTS.md  CHANGELOG.md  COSMIC.md  LICENSE  README.md  pyproject.toml
configs/edge/: desktop_dev.json  orin_nano_8gb.json  orin_nano_tight.json
docs/: ARCHITECTURE.md  BUOYANCY_EVOLUTION.md  CONTINUITY_EXPERIMENT.md  EDGE_SPEC.md  EXPERIMENT_PROTOCOL.md  NAME.md  RE_GROUNDING.md  WORK_ORDER_continuity_corpus.md  WORK_ORDER_model_qualification.md
experiments/: DETERMINISM.md  M1_AUDIT.md  M1_RESULTS.md  MODEL_LADDER.md  THINKING_MODE_FINDING.md  plain_generation_probe.py  qualify_models.py  run_continuity.py  run_matrix.py
experiments/probes/: continuity_tasks.json  v0_probes.json
experiments/runs/continuity_20260722/: c3_fair.json  c3_plain.json  c4_gemma.json  cont_prefix.json
experiments/runs/ladder_20260722/: functiongemma_270m.json  gemma3_1b.json  granite4_350m.json  qwen2.5_0.5b.json  qwen3.5_0.8b.json  qwen3.5_2b.json
experiments/runs/plaingen_20260722/: plaingen_results.json
experiments/runs/qualification_20260722T220405Z/: MODEL_QUALIFICATION.md  gemma3_1b.json  gemma3_4b.json  (+4 more)
scripts/: helix_seat_watch.sh  jetson_bootstrap.sh  monitor_claude_seat.sh  monitor_t2helix_seats.sh  publish_github.sh
src/conditioned_kernel/: __init__.py  __main__.py  cli.py  compile.py  continuity.py  edge.py  generate.py  ids.py  paths.py  pipeline.py  score.py  state.py
state/: current.json  methods.json  threads.json
tests/: test_compile.py  test_continuity_corpus.py  test_continuity_scoring.py  test_corrections_are_tracked.py  test_edge.py  test_measurement_validity.py  test_model_qualification.py  test_parse.py  test_pipeline_dry.py  test_repair.py  test_run_matrix_env.py  test_score.py  test_validate.py
(+8 files in other folders)
