[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "conditioned-kernel"
version = "0.2.0"
description = "Edge-first substrate-conditioned generation for Jetson-class nodes: model as replaceable kernel, intelligence in the surrounding circuit."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Anthony J. Vasquez Sr.", email = "anthony@templetwo.com"}
]
requires-python = ">=3.10"
keywords = [
    "ai",
    "ollama",
    "local-llm",
    "substrate",
    "context-conditioning",
    "temple-two",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
ck = "conditioned_kernel.cli:main"
conditioned-kernel = "conditioned_kernel.cli:main"

[project.urls]
Homepage = "https://github.com/templetwo/conditioned-kernel"
Repository = "https://github.com/templetwo/conditioned-kernel"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
conditioned_kernel = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
